# Ai_AutoSDLC

./: .gitignore  AGENTS.md  AI-SDLC 全自动化框架 产品需求文档（PRD）.md  README.md  USER_GUIDE.zh-CN.md  autopilot.md  development-summary.md  frontend-program-branch-rollout-plan.md  packaging_backend.py  program-manifest.yaml  pyproject.toml
.ai-sdlc/config/: pipeline.yml
.ai-sdlc/memory/: constitution.md
.ai-sdlc/profiles/: decisions.yml  tech-stack.yml
.ai-sdlc/state/: checkpoint.yml  codex-handoff.md  p1-dev-summary.md  repo-facts.json  resume-pack.yaml
.cursor/rules/: ai-sdlc.md
.github/workflows/: compatibility-gate.yml  cross-platform-core.yml  loop-e2e-release-gate.yml  posix-offline-smoke.yml  pr-checks.yml  release-artifact-smoke.yml  release-build.yml  windows-offline-smoke.yml  windows-update-prompt-e2e.yml  windows-user-guide-e2e-temp.yml  windows-user-guide-e2e.yml
ai_sdlc/: __init__.py  __main__.py
cursor/commands/: dev.autopilot.md
cursor/rules/: ai-sdlc.md
deliverables/ai-sdlc-training-experience/: README.md  app.js  index.html  package-lock.json  review-findings-2026-04-26.md  styles.css  training-restructure-outline-2026-04-27.zh-CN.md
docs/: SPEC_SPLIT_AND_PROGRAM.zh-CN.md  USER_GUIDE.zh-CN.md  Vue3企业级前端开发规范方案.md  enterprise-agentops-setup.zh-CN.md  framework-defect-backlog.zh-CN.md  plan-check-cli-spec.zh.md  production-feedback-sdlc-guard-adoption-comments.zh-CN.md  pull-request-checklist.zh.md  requirements-gap-reconciliation.zh-CN.md  vue3-public-primevue-default-provider-prd.zh-CN.md  框架自迭代开发与发布约定.md
docs/defects/: 2026-03-26-legacy-checkpoint-reconcile.zh-CN.md  2026-04-24-v0.7.0-windows-offline-e2e-issues.zh-CN.md
docs/releases/: v0.4.0.md  v0.5.0.md  v0.5.1.md  v0.6.0.md  v0.7.0.md  v0.7.1.md  v0.7.10.md  v0.7.11.md  v0.7.12.md  v0.7.13.md  v0.7.14.md  v0.7.15.md  v0.7.16.md  v0.7.17.md  v0.7.18.md  v0.7.19.md  v0.7.2.md  v0.7.3.md  v0.7.4.md  v0.7.5.md  v0.7.6.md  v0.7.7.md  v0.7.8.md  v0.7.9.md  v0.8.0.md  v0.8.1.md  v0.8.10.md  v0.8.2.md  v0.8.3.md  v0.8.4.md  v0.8.5.md  v0.8.6.md  v0.8.7.md  (+10 more)
packaging/: install_online.ps1  install_online.sh
presets/: go.yml  java-spring.yml  node-express.yml  python-fastapi.yml  react-ts.yml  vue3-ts.yml
rules/: batch-protocol.md  brownfield-corpus.md  multi-agent.md  pipeline.md  quality-gate.md  scenario-routing.md
scripts/: frontend_browser_gate_probe_runner.mjs  loop_e2e_release_gate.py  program_bounded_stage_t61a.py
templates/: brownfield-corpus-template.md  constitution-template.zh.md  execution-log-template.md  plan-template.md  prd-template.md  program-manifest.example.yaml  readme-template.zh.md  spec-template.md  summary-template.md  tasks-template.md
tests/: conftest.py
(+1741 files in other folders)
